add repo rule for @ocaml_xcode; improve //bin:<compiler>.sh cmds
* to expose DEVELOPER_DIR and SDKROOT, needed by the xcode tc under
Bazel on macos
* add those env vars to ocaml/cc subcommands, in ocaml_cc_config rule
used by //config:config_json
* the //bin compiler run cmds now use a single .sh script

--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -3,7 +3,7 @@ workspace(name = "ocamlcc")
 load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
 load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
 
-load("//:WORKSPACE.bzl", "obazl_deps")
+load("//:WORKSPACE.bzl", "obazl_deps", "ocaml_xcode")
 obazl_deps()
 
 ## coldstart snapshot for development:
@@ -11,6 +11,8 @@ local_repository(
     name = "baseline",
     path = ".baseline"
 )
+
+ocaml_xcode()
 
 # load("//bzl:rules.bzl",
 #      "new_local_pkg_repository")
