--- a/config/camlheaders/BUILD.bazel
+++ b/config/camlheaders/BUILD.bazel
@@ -4,12 +4,14 @@ load(":BUILD_RULES.bzl", "camlheaders")
 camlheaders(
     name = "camlheaders",
     visibility = [
+        "@baseline//:__subpackages__",
         "//asmcomp:__pkg__",
-        "//bin:__pkg__",
+        "//bin:__subpackages__",
         "//boot:__pkg__",
         "//debugger:__pkg__",
         "//lex:__pkg__",
         "//ocamltest:__pkg__",
+        "//test:__pkg__",
         "//testsuite:__subpackages__",
         "//toolchain/adapter:__pkg__",
         "//tools:__pkg__",
