--- a/testsuite/tests/lib-array/BUILD.bazel
+++ b/testsuite/tests/lib-array/BUILD.bazel
@@ -1,4 +1,4 @@
-load("//bzl/rules/test:rules.bzl", "inline_expect_test")
+load("//test:rules.bzl", "inline_expect_test")
 
 inline_expect_test(
     name = "Test_array_test",
