--- a/testsuite/tests/basic/BUILD.bazel
+++ b/testsuite/tests/basic/BUILD.bazel
@@ -99,12 +99,22 @@ expect_test(
     name    = "bigints_test",
     stdout  = "bigints.stdout",
     expect  = "bigints.reference",
+    opts   = ["-nopervasives", "-open", "Stdlib"],
+    prologue = select({
+        "//testsuite/tests:with-stdlib?":["//stdlib"],
+        "//conditions:default": [
+            "//stdlib:CamlinternalFormatBasics",
+            "//stdlib:Stdlib",
+            "//stdlib:Stdlib.Sys"
+        ]
+    }),
     main    = ":Bigints",
 )
 
 test_module(
     name   = "Bigints",
     struct = "bigints.ml",
+    open   = ["//stdlib:Stdlib"],
     deps   = select({
         "//testsuite/tests:with-stdlib?":["//stdlib"],
         "//conditions:default": ["//stdlib:Stdlib.Sys"]
@@ -122,6 +132,7 @@ expect_test(
 test_module(
     name   = "Boxedints",
     struct = "boxedints.ml",
+    open   = ["//stdlib:Stdlib"],
     deps   = select({
         "//testsuite/tests:with-stdlib?":["//stdlib"],
         "//conditions:default": [
@@ -136,7 +147,6 @@ test_module(
 test_module( # not a test, used by unit_naming_test
     name   = "CamlCase",
     struct = "camlCase.ml",
-    deps   = ["//stdlib:Stdlib"]
 )
 ################################################################
 
@@ -162,6 +172,7 @@ test_module(
     name   = "Constprop",
     struct = "constprop.ml.c",
     opts   = ["-pp", "cpp"],
+    open   = ["//stdlib:Stdlib"],
     deps   = select({
         "//testsuite/tests:with-stdlib?":["//stdlib"],
         "//conditions:default": [
@@ -185,6 +196,7 @@ expect_test(
 test_module(
     name   = "Divint",
     struct = "divint.ml",
+    open   = ["//stdlib:Stdlib"],
     deps   = select({
         "//testsuite/tests:with-stdlib?":["//stdlib"],
         "//conditions:default": [
@@ -205,6 +217,7 @@ expect_test(
 test_module(
     name   = "Equality",
     struct = "equality.ml",
+    open   = ["//stdlib:Stdlib"],
     deps   = select({
         "//testsuite/tests:with-stdlib?":["//stdlib"],
         "//conditions:default": ["//stdlib:Stdlib.Fun"]
@@ -239,7 +252,7 @@ expect_test(
 test_module(
     name   = "Eval_order_2",
     struct = "eval_order_2.ml",
-    deps   = ["//stdlib:Stdlib"]
+    open   = ["//stdlib:Stdlib"]
 )
 
 ############
@@ -253,6 +266,7 @@ expect_test(
 test_module(
     name   = "Eval_order_3",
     struct = "eval_order_3.ml",
+    open   = ["//stdlib:Stdlib"],
     deps   = select({
         "//testsuite/tests:with-stdlib?":["//stdlib"],
         "//conditions:default": ["//stdlib:Stdlib.Printf"]
@@ -270,7 +284,7 @@ expect_test(
 test_module(
     name   = "Eval_order_4",
     struct = "eval_order_4.ml",
-    deps   = ["//stdlib:Stdlib"]
+    open   = ["//stdlib:Stdlib"],
 )
 
 ############
@@ -284,6 +298,7 @@ expect_test(
 test_module(
     name   = "Eval_order_6",
     struct = "eval_order_6.ml",
+    open   = ["//stdlib:Stdlib"],
     deps   = select({
         "//testsuite/tests:with-stdlib?":["//stdlib"],
         "//conditions:default": ["//stdlib:Stdlib.Int"]
@@ -301,6 +316,7 @@ expect_test(
 test_module(
     name   = "Eval_order_7",
     struct = "eval_order_7.ml",
+    open   = ["//stdlib:Stdlib"],
 )
 
 ############
@@ -330,7 +346,7 @@ expect_test(
 test_module(
     name   = "Float",
     struct = "float.ml",
-    # deps   = ["//stdlib:Stdlib"]
+    open   = ["//stdlib:Stdlib"],
     deps   = select({
         "//testsuite/tests:with-stdlib?":["//stdlib"],
         "//conditions:default": ["//stdlib:Stdlib.Printf"]
@@ -361,6 +377,7 @@ expect_test(
 test_module(
     name   = "Includestruct",
     struct = "includestruct.ml",
+    open   = ["//stdlib:Stdlib"],
     deps   = select({
         "//testsuite/tests:with-stdlib?":["//stdlib"],
         "//conditions:default": [
@@ -382,6 +399,7 @@ expect_test(
 test_module(
     name   = "Localexn",
     struct = "localexn.ml",
+    open   = ["//stdlib:Stdlib"],
 )
 
 ############
@@ -559,11 +577,12 @@ expect_test(
 test_module(
     name   = "Pr7657",
     struct = "pr7657.ml",
+    open   = ["//stdlib:Stdlib"],
     opts   = [
         "-no-strict-sequence",
         # "-w", "-21-5"
     ],
-    stdlib_primitives =  True
+    # stdlib_primitives =  True
 )
 
 ############
@@ -661,8 +680,7 @@ expect_test(
 test_module(
     name   = "Trigraph",
     struct = "trigraph.ml",
-    deps   = [
-    ]
+    open   = ["//stdlib:Stdlib"]
 )
 
 ############
